# rgs-ribx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rgs_ribx/: __init__.py  errors.py
src/rgs_ribx/lost_capacity/: __init__.py  compute.py  graph.py  profile.py
src/rgs_ribx/model/: build.py  enrich.py  entities.py  field_maps.py  geometry.py  inclination.py  raw.py  segments.py  validation.py
src/rgs_ribx/parsing/: __init__.py  headers.py  ribx_to_pandas.py  sufrib.py
src/rgs_ribx/parsing/object_headers/: A_inspectie_leiding.csv  C_inspectie_put.csv  E_inspectie_reiniging_kolk.csv  G_reiniging_leiding.csv  J_reiniging_put.csv  L_stortbon_reiniging.csv  M_calamiteit_reiniging.csv  N_stagnatie_reiniging.csv  Q_reiniging_drainageleiding.csv  S_reiniging_drainageput.csv  codelijsten_6.13.csv
tests/: test_build.py  test_build_raw.py  test_compute.py  test_enrich.py  test_entities.py  test_errors.py  test_geometry.py  test_graph.py  test_headers.py  test_inclination.py  test_observation_groups.py  test_pipeline_end_to_end.py  test_profile.py  test_public_api.py  test_raw.py  test_ribx_to_pandas.py  test_segments.py  test_sufrib.py  test_validation.py
tests/fixtures/: inclined.ribx  minimal.ribx
